apps/homelab/tandoor/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tandoor
  namespace: tandoor
  labels: &labels
    app.kubernetes.io/name: tandoor
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      # annotations:
      #   backup.velero.io/backup-volumes: media,static
      labels: *labels
    spec:
      restartPolicy: Always
      containers:
        - name: tandoor-nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
          volumeMounts:
            - mountPath: /media
              name: data
              subPath: media/files
            - mountPath: /static
              name: data
              subPath: static/files
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx-config
              readOnly: true
        - name: tandoor
          image: vabene1111/recipes
          imagePullPolicy: IfNotPresent
          command:
            - /opt/recipes/venv/bin/gunicorn
            - -b
            - :8080
            - --access-logfile
            - "-"
            - --error-logfile
            - "-"
            - --log-level
            - INFO
            - recipes.wsgi
          ports:
            - containerPort: 8080
              protocol: TCP
              name: gunicorn
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
          volumeMounts:
            - mountPath: /opt/recipes/mediafiles
              name: data
              # mount as subPath due to lost+found on ext4 pvc
              subPath: media/files
            - mountPath: /opt/recipes/staticfiles
              name: data
              # mount as subPath due to lost+found on ext4 pvc
              subPath: static/files
          securityContext:
            runAsUser: 65534
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: nginx-config
          configMap:
            name: nginx-config
