apps/homelab/tandoor/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tandoor
  namespace: tandoor
  labels: &labels
    app.kubernetes.io/name: tandoor
spec:
  selector: *labels
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: gunicorn
      protocol: TCP
      port: 8080
      targetPort: gunicorn
