apps/homelab/tandoor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tandoor
  namespace: tandoor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - recipes.rookian.dev
      secretName: tls-recipes-homelab
  rules:
    - host: recipes.rookian.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tandoor
                port:
                  name: gunicorn
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: tandoor
                port:
                  name: http
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: tandoor
                port:
                  name: http
